// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/components/pages/songs/SongList.vue { locale: en } snapshot test { loading: false, songs: [] } renders empty state 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <thead>
        <tr>
          <!---->
          <!---->
          <th class="">
            <div class="th-wrap"><span class="is-relative"> Version <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> Name <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> Artist <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> BPM <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <!---->
        </tr>
        <!---->
        <!---->
      </thead>
      <tbody>
        <tr class="is-empty">
          <td colspan="4">
            <section class="section">
              <div class="content has-text-grey has-text-centered">
                <p>No Data</p>
              </div>
            </section>
          </td>
        </tr>
      </tbody>
      <!---->
    </table>
    <!---->
  </div>
  <div class="top level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a><a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`/components/pages/songs/SongList.vue { locale: en } snapshot test { loading: false, songs: [songs] } renders song list 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <thead>
        <tr>
          <!---->
          <!---->
          <th class="">
            <div class="th-wrap"><span class="is-relative"> Version <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> Name <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> Artist <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> BPM <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <!---->
        </tr>
        <!---->
        <!---->
      </thead>
      <tbody>
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Version" class="">
            1st
          </td>
          <td data-label="Name" class=""><a>
              PARANOiA
            </a></td>
          <td data-label="Artist" class="">
            180
          </td>
          <td data-label="BPM" class="">
            180
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Version" class="">
            X
          </td>
          <td data-label="Name" class=""><a>
              PARANOiA(X-Special)
            </a></td>
          <td data-label="Artist" class="">
            180
          </td>
          <td data-label="BPM" class="">
            180
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Version" class="">
            X
          </td>
          <td data-label="Name" class=""><a>
              SP-TRIP MACHINE～JUNGLE MIX～(X-Special)
            </a></td>
          <td data-label="Artist" class="">
            DE-SIRE
          </td>
          <td data-label="BPM" class="">
            160
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <!---->
      </tbody>
      <!---->
    </table>
    <!---->
  </div>
  <div class="top level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a><a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <li><a role="button" href="#" aria-current="true" class="pagination-link is-current ">1</a></li>
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`/components/pages/songs/SongList.vue { locale: en } snapshot test { loading: true } renders loading state 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <thead>
        <tr>
          <!---->
          <!---->
          <th class="">
            <div class="th-wrap"><span class="is-relative"> Version <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> Name <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> Artist <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> BPM <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <!---->
        </tr>
        <!---->
        <!---->
      </thead>
      <tbody>
        <tr class="is-empty">
          <td colspan="4">
            <section class="section">
              <div class="b-skeleton is-animated">
                <div class="b-skeleton-item is-rounded"></div>
              </div>
              <div class="b-skeleton is-animated">
                <div class="b-skeleton-item is-rounded"></div>
              </div>
              <div class="b-skeleton is-animated">
                <div class="b-skeleton-item is-rounded"></div>
              </div>
            </section>
          </td>
        </tr>
      </tbody>
      <!---->
    </table>
    <transition-stub name="fade">
      <div class="loading-overlay is-active">
        <div class="loading-background"></div>
        <div class="loading-icon"></div>
      </div>
    </transition-stub>
  </div>
  <div class="top level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a><a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`/components/pages/songs/SongList.vue { locale: ja } snapshot test { loading: false, songs: [] } renders empty state 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <thead>
        <tr>
          <!---->
          <!---->
          <th class="">
            <div class="th-wrap"><span class="is-relative"> バージョン <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> 曲名 <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> アーティスト <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> BPM <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <!---->
        </tr>
        <!---->
        <!---->
      </thead>
      <tbody>
        <tr class="is-empty">
          <td colspan="4">
            <section class="section">
              <div class="content has-text-grey has-text-centered">
                <p>データがありません</p>
              </div>
            </section>
          </td>
        </tr>
      </tbody>
      <!---->
    </table>
    <!---->
  </div>
  <div class="top level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a><a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`/components/pages/songs/SongList.vue { locale: ja } snapshot test { loading: false, songs: [songs] } renders song list 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <thead>
        <tr>
          <!---->
          <!---->
          <th class="">
            <div class="th-wrap"><span class="is-relative"> バージョン <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> 曲名 <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> アーティスト <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> BPM <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <!---->
        </tr>
        <!---->
        <!---->
      </thead>
      <tbody>
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="バージョン" class="">
            1st
          </td>
          <td data-label="曲名" class=""><a>
              PARANOiA
            </a></td>
          <td data-label="アーティスト" class="">
            180
          </td>
          <td data-label="BPM" class="">
            180
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="バージョン" class="">
            X
          </td>
          <td data-label="曲名" class=""><a>
              PARANOiA(X-Special)
            </a></td>
          <td data-label="アーティスト" class="">
            180
          </td>
          <td data-label="BPM" class="">
            180
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="バージョン" class="">
            X
          </td>
          <td data-label="曲名" class=""><a>
              SP-TRIP MACHINE～JUNGLE MIX～(X-Special)
            </a></td>
          <td data-label="アーティスト" class="">
            DE-SIRE
          </td>
          <td data-label="BPM" class="">
            160
          </td>
          <!---->
        </tr>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <!---->
        <!---->
      </tbody>
      <!---->
    </table>
    <!---->
  </div>
  <div class="top level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a><a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <li><a role="button" href="#" aria-current="true" class="pagination-link is-current ">1</a></li>
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`/components/pages/songs/SongList.vue { locale: ja } snapshot test { loading: true } renders loading state 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <thead>
        <tr>
          <!---->
          <!---->
          <th class="">
            <div class="th-wrap"><span class="is-relative"> バージョン <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> 曲名 <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> アーティスト <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> BPM <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <!---->
        </tr>
        <!---->
        <!---->
      </thead>
      <tbody>
        <tr class="is-empty">
          <td colspan="4">
            <section class="section">
              <div class="b-skeleton is-animated">
                <div class="b-skeleton-item is-rounded"></div>
              </div>
              <div class="b-skeleton is-animated">
                <div class="b-skeleton-item is-rounded"></div>
              </div>
              <div class="b-skeleton is-animated">
                <div class="b-skeleton-item is-rounded"></div>
              </div>
            </section>
          </td>
        </tr>
      </tbody>
      <!---->
    </table>
    <transition-stub name="fade">
      <div class="loading-overlay is-active">
        <div class="loading-background"></div>
        <div class="loading-icon"></div>
      </div>
    </transition-stub>
  </div>
  <div class="top level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a><a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;
